# 01-rcli

./: Cargo.toml  README.md  deny.toml  test.rest  test.sh
fixtures/: blake3.txt  ed25519.pk  ed25519.sk
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  crypto.rs  csv.rs  http.rs  mod.rs  opts.rs  passwd.rs
src/process/: base64.rs  crypto.rs  csv.rs  http.rs  mod.rs  passwd.rs
tests/: test_passwd_generating.rs
