[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
