[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.6.1"
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
enum_dispatch = "0.3.13"
rand = "0.8.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_yaml = "0.9.34"
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["fs", "compression-full", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
